# VSRG-Renderer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: audio_manager.rs  audio_manager_stub.rs  constants.rs  draw.rs  lib.rs  logger.rs  main.rs  map.rs  old.rs  render.rs  utils.rs
src/old/: shader.rs  v2 old.rs  v3 old.rs
tests/: audio_seek_tests.rs  cli_args_tests.rs  map_update_tests.rs  util_tests.rs
