[package]
name = "vsrg-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { version = "2.9.1", features = ["serde"] }
macroquad = "0.4.14"
ordered-float = { version = "5.0.0", features = ["serde"] }
rodio = "0.20.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"