[package]
name = "vsrg-renderer"
version = "0.1.0"
edition = "2021"
description = "A VSRG renderer built with Rust and Macroquad."
license = "MIT"
repository = "https://github.com/tylersfoot/vsrg-renderer"
keywords = ["vsrg", "rhythm", "game", "renderer", "macroquad"]
categories = ["game-engines", "multimedia", "visualization"]

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
hound = "3.5.1"
macroquad = "0.4.14"
rodio = { version = "0.20.1"}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
